name:           scheme48
version:        0.0.0
build-type:     Simple
cabal-version:  >= 1.10

executable scheme48
  main-is: Main.hs
  hs-source-dirs:
      src
  build-depends:
      base
      , parsec
  other-modules:
      AST
      , Parser
      , Interpreter
      , PrettyPrinter
      , Builtins
  default-language: Haskell2010

-- library
--   hs-source-dirs:
--       src
--   build-depends:
--       base
--   exposed-modules:
--       Scheme48
--   other-modules:
--       Main
--       Paths_scheme48
--   default-language: Haskell2010
--
-- test-suite test
--   type: exitcode-stdio-1.0
--   main-is: Tests.hs
--   hs-source-dirs:
--       src
--     , test
--   build-depends:
--       base
--     , scheme48
--     , HUnit
--   other-modules:
--       Main
--       Scheme48
--   default-language: Haskell2010
