name:           scheme48
version:        0.1.0.0
build-type:     Simple
cabal-version:  >= 1.22

library
  hs-source-dirs: src
  build-depends: base
               , parsec
               , mtl
               , transformers
  exposed-modules: AST
                 , Builtins
                 , Env
                 , Errors
                 , Interpreter
                 , Parser
                 , PrettyPrinter
                 , Repl
                 , Runner
  default-language: Haskell2010

executable scheme48-exe
  main-is: Main.hs
  hs-source-dirs: app
  build-depends: base
               , scheme48

  default-language: Haskell2010


test-suite test
  type: exitcode-stdio-1.0
  main-is: Tests.hs
  hs-source-dirs: test
  build-depends: base
               , scheme48
               , HUnit
               , hspec
               , silently
  default-language: Haskell2010
